[gd_scene load_steps=10 format=3 uid="uid://c1r6apfs6eb8j"]

[ext_resource type="Script" path="res://assets/scripts/camera/Camera.gd" id="1_r7vh5"]
[ext_resource type="PackedScene" uid="uid://cvynv7sgqowum" path="res://assets/components/velocityComponent/velocityComponent.tscn" id="2_rb4ck"]
[ext_resource type="PackedScene" uid="uid://cmyxa8pfmhpcy" path="res://assets/components/inputComponent/inputComponent.tscn" id="3_jchmi"]
[ext_resource type="FontFile" uid="uid://xmwjvmqspojb" path="res://assets/fonts/Grand_Aventure_Text.otf" id="4_8av4t"]
[ext_resource type="Texture2D" uid="uid://dc3fkfugwvtla" path="res://assets/textures/misc/company-logo (1).png" id="5_1qj5n"]
[ext_resource type="Texture2D" uid="uid://bshsrbn82o1rq" path="res://assets/textures/crosshair/Crosshair.png" id="6_44jcq"]
[ext_resource type="Texture2D" uid="uid://bxxkaxb70qsu8" path="res://assets/textures/ui/hud.png" id="7_njr07"]
[ext_resource type="Texture2D" uid="uid://btlv87lcgekb7" path="res://assets/textures/ui/healthbar.png" id="8_6fqy3"]

[sub_resource type="Theme" id="Theme_wcn1k"]
default_font = ExtResource("4_8av4t")

[node name="Camera" type="CharacterBody3D" node_paths=PackedStringArray("velocityComponent", "inputComponent")]
collision_layer = 0
collision_mask = 0
motion_mode = 1
platform_floor_layers = 4294901760
script = ExtResource("1_r7vh5")
camRecoilStrength = 8.0
camReturnSpeed = 15.0
camRecoil = Vector3(5, 1, 0.25)
zoomSpeed = 40.0
velocityComponent = NodePath("velocityComponent")
inputComponent = NodePath("inputComponent")

[node name="camPivot" type="Node3D" parent="."]

[node name="horizonal" type="Node3D" parent="camPivot"]

[node name="vertical" type="SpringArm3D" parent="camPivot/horizonal"]
collision_mask = 3
spring_length = 0.0

[node name="Camera" type="Camera3D" parent="camPivot/horizonal/vertical"]
fov = 90.0

[node name="RayCast3D" type="RayCast3D" parent="camPivot/horizonal/vertical/Camera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.863349)
target_position = Vector3(0, 0, -250)
collision_mask = 23
collide_with_areas = true

[node name="camRayEnd" type="Marker3D" parent="camPivot/horizonal/vertical/Camera/RayCast3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -250.5)

[node name="velocityComponent" parent="." instance=ExtResource("2_rb4ck")]
vAcceleration = 3.0

[node name="inputComponent" parent="." instance=ExtResource("3_jchmi")]

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2

[node name="WIP" type="Label" parent="HUD"]
self_modulate = Color(1, 1, 1, 0.611765)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -350.5
offset_right = 350.5
offset_bottom = 37.0
grow_horizontal = 2
theme = SubResource("Theme_wcn1k")
theme_override_font_sizes/font_size = 33
text = "WORK IN PROGRESS - DOES NOT REPRESENT THE FINAL LOOK OF THE GAME"

[node name="Logo" type="TextureRect" parent="HUD"]
self_modulate = Color(1, 1, 1, 0.372549)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -167.0
offset_top = -183.0
grow_horizontal = 0
grow_vertical = 0
texture = ExtResource("5_1qj5n")
expand_mode = 1

[node name="Crosshair" type="TextureRect" parent="HUD"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.5
offset_top = -4.0
offset_right = 3.5
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_44jcq")
expand_mode = 1

[node name="HealthWeaponHUD" type="TextureRect" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_njr07")
expand_mode = 1
stretch_mode = 6

[node name="textureProgressBar" type="TextureProgressBar" parent="HUD/HealthWeaponHUD"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 18.0
offset_top = -96.0
offset_right = 827.0
offset_bottom = -11.0
grow_vertical = 0
step = 0.0
value = 100.0
nine_patch_stretch = true
stretch_margin_left = 190
stretch_margin_right = 275
texture_progress = ExtResource("8_6fqy3")

[connection signal="mouseButtonHeld" from="inputComponent" to="." method="_on_input_component_mouse_button_held"]
[connection signal="mouseButtonPressed" from="inputComponent" to="." method="_on_input_component_mouse_button_pressed"]
[connection signal="onMouseMotion" from="inputComponent" to="." method="_on_input_component_on_mouse_motion"]
